--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "~2.1.5",
     "@rainbow-me/rainbowkit": "2.2.8",
     "@tanstack/react-query": "~5.59.15",
+    "@types/qrcode": "^1.5.5",
     "@uniswap/sdk-core": "~5.8.2",
     "@uniswap/v2-sdk": "~4.6.1",
     "blo": "~1.2.0",
@@ -28,6 +29,7 @@
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "~4.0.1",
     "react": "~19.0.0",
     "react-dom": "~19.0.0",
